Refactor Client structure